--- a/client/html_Game/stylesheet.css
+++ b/client/html_Game/stylesheet.css
@@ -50,6 +50,38 @@ table {
     color: DarkGrey;
     font-size: 14px;
     font-weight: 200;
-    margin-bottom: 60px;
-    margin-top: 5px;
+    margin-bottom: 50px;
+    margin-top: 0px;
+}
+
+#h2_createparty {
+    margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+@keyframes fadeIn {
+    from {
+        display:block;
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@keyframes fadeOut {
+    from {
+        opacity:1;
+    }
+    to {
+        opacity:0;
+        display:none;
+    }
 }
