--- a/client/html_Game/stylesheet.css
+++ b/client/html_Game/stylesheet.css
@@ -15,8 +15,18 @@ td {
     padding: 15px;
 }
 
+p {
+    font-size: 16px;
+    line-height: 28px;
+}
+
 table {
     border-spacing: 1px;
+    margin: 0 auto;
+}
+
+.p_grey {
+    color: grey;
 }
 
 .content {
@@ -42,6 +52,7 @@ table {
     margin: 0 auto;
     border: 1px black solid;
 }
+
 
 #little_p {
     display: inline-block;
