--- a/client/html_Game/stylesheet.css
+++ b/client/html_Game/stylesheet.css
@@ -80,6 +80,14 @@ table {
     margin-top: 50px;
 }
 
+#div_mistake_AFF {
+    margin: 0 auto;
+    background-image: 100%;
+    background: no-repeat;
+    height: 250px;
+    width: 250px;
+}
+
 
 
 
